# MADO

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF_PC.md  MANUAL.txt  README.md  build.rs  rtaudio_wrapper.cpp
assets/icons/: gen_icon.py
packaging/: AppIcon.icns  Info.plist  build_dmg.sh  entitlements.plist  installer_win.iss
scripts/: camera_service.py  camera_service_mac.py  frame_mmap.py
src/: audio.rs  audio_output.rs  camera.rs  hue_wheel.rs  main.rs  playlist.rs  rtaudio_ffi.rs  settings.rs  theme.rs  video.rs
